name:                reproc
version:             0.1.0.0
synopsis:            A single-purpose tool for changing values in a csv column to be relative to their median value instead of absolute.
-- description:
homepage:            https://github.com/jbrot/reproc#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Brot
maintainer:          jbrot@umich.edu
copyright:           (c) 2017 Joshua Brot
category:            CSV
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable reproc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , text
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jbrot/reproc
